--- a/Resume_Maker/style.css
+++ b/Resume_Maker/style.css
@@ -5,6 +5,7 @@
 }
 body{
 	background: #efefef;
+	font-family: sans-serif;
 }
 .profile-img{
 	width:40%;
@@ -14,3 +15,60 @@ body{
 	width:100%;
 	height:100%;
 }
+.about{
+	margin-left: 15px;
+}
+.profile-info{
+	width: 60%;
+	height: 100vh;
+	float: left;
+	padding: 0 30px;
+	overflow: scroll;
+	overflow-x: hidden;
+}
+/*Hide the scrolling bar*/
+.profile-info::-webkit-scrollbar{
+	width:0;
+}
+.profile-info h1{
+	margin-top: 50px;
+	margin-bottom: 30px;
+}
+.social-media img{
+	height: 30px;
+}
+.social-media{
+	margin-top:20px;
+	margin-left: 15px;
+}
+.profile-info h2{
+	margin-top: 50px;
+	margin-bottom:15px;
+}
+.expertise img{
+	height: 5%;
+	margin: 5px:
+}
+.expertise {
+	display: inline-block;
+	width: 28%:
+.expertise {
+	display: inline-block;
+	width: 28%:
+	margin: 2%;
+	text-align: center;
+	padding: 30px 10px;
+	box-shadow: 0 0 15px 1px rgba(37,73,214,0.18);
+	background:#fff;
+}
+.expertise small{
+	padding-top: 10;
+	display: block;
+}
+.project img{
+	width:31%;
+	padding: 4px;
+	margin-bottom: 5px;
+	margin-left: 5px;
+}
+
