--- a/Resume_Maker/style.css
+++ b/Resume_Maker/style.css
@@ -71,4 +71,33 @@ body{
 	margin-bottom: 5px;
 	margin-left: 5px;
 }
+.form-box{
+	margin-top: 30px
+}
+.input-group input{
+	width:45%;
+	border: 0;
+	margin: 2%;
+	display: inline-block;
+	background: #fff;
+}
+
+.text-area textarea{
+	width:95%;
+	border: 0;
+	outline: none !important;
+	padding: 10px;
+	margin: 2%;
+	background: #fff;
+}
+.submit-btn
+{
+	border:0;
+	outline: none !important;
+	padding: 10px 20px;
+	margin: 2%;
+	background: #2ab0ff;
+	cursor: pointer;
+	color: #fff;
+}
 
