--- a/Resume_Maker/style.css
+++ b/Resume_Maker/style.css
@@ -100,4 +100,46 @@ body{
 	cursor: pointer;
 	color: #fff;
 }
+.contact-img{
+	width:20px;
+	margin: -5px 10px;
+}
 
+.contact span{
+	margin: 5%;
+}
+
+.contact {
+	margin: 5% 0 5% 25%;
+	width: 65%;
+}
+.cont{
+	text-align: center;
+	margin-bottom: 20px;
+}
+/*MAKING IT RESPONSIVE*/
+@media only screen and (max-width:900px)
+{
+	.profile-info
+	{
+		width: 100%;
+		overflow: inherit;
+	}
+	.profile-img{
+		width:100%;
+	}
+	.expertise{
+		width:95%;
+		margin-bottom: 10%;
+	}
+	.expertise img{
+		height:8%;
+		margin: 10px 0;
+	}
+	.projects img{
+		width:47%;
+	}
+	span{
+		display: block;
+	}
+}	
