Files are now UP this should display normally

--- a/Simple_Website_WBootstrap/style.css
+++ b/Simple_Website_WBootstrap/style.css
@@ -145,7 +145,7 @@
 }
 
 
-.feature{
+.feature,.services {
 	margin: 200px 0px;
 }
 
@@ -153,3 +153,149 @@
 	max-width: 77%;
 	cursor: pointer;
 }
+
+.feature h2{
+	margin-top: 100px;
+	font-weight: bold;
+	line-height: 50px;
+}
+
+
+.feature p, .services p{
+	margin-top: 25px;
+	margin-bottom: 50px;
+	color: #808080;
+	font-size: 14px;
+	line-height: 18px;
+}
+
+.feature a, .services a{
+	width: 170px;
+	padding: 15px 10px;
+	display: block;
+	background: #6900d1;
+	text-decoration: none !important;
+	color: #fff !important;
+	border-radius: 5px;
+	text-align: center;
+	font-weight: bold;
+	font-size: 14px;
+	box-shadow: 0 9px 9px 1px rgba(204,204, 204,0.5);
+}
+.services h2{
+	margin-top: 100px;
+	font-weight: bold;
+	line-height:50px;
+}
+
+.services a{
+	margin-bottom: 50px;
+}
+
+/*----------reviewing---------->*/
+.review{
+	margin: 100px 0;
+}
+
+.carousel-item img{
+	width: 150px;
+	border-radius: 50%;
+}
+
+.carousel-item{
+	text-align: center;
+	height: 430px;
+}
+
+.carousel-caption{
+	z-index: -1 !important;
+	box-shadow: 0 0 15px 1px rgba(163,163,223,0.5);
+	border-radius: 5px;
+	margin-bottom: 50px;
+}
+
+.carousel-caption h6{
+	margin-top: 55px;
+	font-weight: bold;
+	color: #000 !important;
+}
+
+.carousel-caption h6 small{
+	margin-top: 10px;
+	margin-bottom:50px;
+	display: block;
+	color: #000 !important;
+}
+
+
+.carousel-caption h6 p{
+	text-align: center;
+	padding: 0 50px;
+	font-size: 15px;
+	color: #808080 !important;
+}
+
+.carousel-indicators li{
+	background-color: #6900d1 !important;
+}
+/*Adust to mobile devices*/
+@media only screen and (max-width:800px)
+{
+	.carousel-item{
+		height: 520px;
+	}
+
+	.carousel-caption{
+		margin: 0 10px 50px 10px;
+		left: 0 !important;
+		right: 0 !important;
+	}
+}
+/*----------------FOOTER------------------*/
+.footer{
+	background: #1FCB2E;
+	padding-top:5px;
+}
+
+h2{
+	color: #fff;
+	font-weight: 600;
+	margin: 70px 0;
+}
+
+.footer input{
+	width: 60%;
+	background: transparent;
+	outline: none;
+	border: 0;
+	border-bottom: 1px solid #fff;
+	padding: 10px;
+	color: #fff;
+	margin-bottom: 30px;
+	text-align: center;
+}
+/*Changing the color of the placeholder*/
+::placeholder{
+	color: #efefef;
+	font-size: 13px;
+}
+
+.footer button{
+	padding: 6px;
+	width: 180px;
+	margin: auto;
+	display: block;
+	color: #fff;
+	border: 1px solid #fff;
+	font-size: 20px;
+	background: transparent;
+}
+
+.footer small{
+	font-size: 14px;
+	padding: 70px;
+	padding-bottom: 20px;
+	color: #fff;
+	display:block;
+}
+
