Trying to use flex-start

--- a/Respons_WebS/style.css
+++ b/Respons_WebS/style.css
@@ -224,7 +224,7 @@ html{
 .cards-wrapper{
 	display: flex;
 	/*even space between each card*/
-	justify-content: space-around;
+	justify-content: flex-start;
 }
 
 /*Give each card a specific dimension*/
