--- a/Respons_WebSite/style.css
+++ b/Respons_WebSite/style.css
@@ -34,6 +34,77 @@ html {
   overflow: hidden;
 }
 
+
+.navbar-icon{
+	width: 5.5rem;
+	height: 5.5rem;
+	background-color: var(--white-color);
+	border-radius: 50%;
+	cursor: pointer;
+	flex-direction: column;
+}
+
+.open-navbar-icon{
+	position: fixed;
+	top: 6.5rem;
+	left: 6.5rem;
+	z-index: 200;
+}
+
+.navbar-icon .line{
+	height: 0.2rem;
+	width: 3.5rem;
+	background-color: var(--light-grey-color);
+}
+
+.open-navbar-icon .line{
+	margin: 0.3rem 0;
+}
+
+.navbar-wrapper{
+	width: 100vw;
+	height: 100vh
+	background-color: rgba(255,255,255,0.7);
+	position: fixed;
+	left: 0;
+	bottom: 0;
+	/*navbar went behind the header we can fix this thanks to z-index*/
+	z-index: 300;
+	padding: 3.5rem 5.5rem 3.5rem 3.5rem;
+
+}
+
+.navbar{
+	width: 100%;
+	height: 100%;
+	background-color: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.3)), url(images/navbar-bg.jpg) center no-repeat;
+	background-size: cover;;
+	position: relative
+}
+
+/*I close the navigation bar icon*/
+.close-navbar-icon{
+	position: absolute;
+	/*to place the element according to its parent element
+	 * I assign to navbar position:relative*/
+	top: 2.5rem;
+	right: 3.0rem;
+}
+
+
+.close-navbar-icon .line{
+	position:absolute;
+	/*to place the element according to its parent element*/
+}
+
+.line-1{
+	transform: rotate(40deg);
+}
+
+.line-2{
+	transform: rotate(-40deg);
+}
+
 .header{
     width: 100%;
     /*100vh is 100 percent and I subtract 7rem from all four sides*/
@@ -42,6 +113,14 @@ html {
     background-size: cover;
     position: relative;
 }
+
+.nav-link{
+	font-size: 3rem;
+	font-weight: 700;
+	color: var(--white-color);
+	text-transform: uppercase;
+}
+
 
 .header-text{
     /*text-align: center;*/
@@ -341,7 +420,8 @@ html {
 }
 
 /*Styling the navigation button*/
-.navigation-button{
+.navigation-button
+{
 	/*set its position to the top left*/
 	position: absolute;
 	top: 0.5rem;
@@ -604,5 +684,3 @@ html {
 	letter-spacing: 0.2rem;
 	margin-top: 5rem;
 }
-
-
