--- a/Respons_WebSite/style.css
+++ b/Respons_WebSite/style.css
@@ -63,15 +63,15 @@ html {
 
 .navbar-wrapper{
 	width: 100vw;
-	height: 100vh
+	height: 100vh;
 	background-color: rgba(255,255,255,0.7);
 	position: fixed;
 	left: 0;
-	bottom: 0;
+	bottom: -100%;
+	opacity: 0;
 	/*navbar went behind the header we can fix this thanks to z-index*/
 	z-index: 300;
 	padding: 3.5rem 5.5rem 3.5rem 3.5rem;
-
 }
 
 .navbar{
@@ -89,6 +89,7 @@ html {
 	 * I assign to navbar position:relative*/
 	top: 2.5rem;
 	right: 3.0rem;
+	z-index: 300;
 }
 
 
@@ -105,6 +106,13 @@ html {
 	transform: rotate(-40deg);
 }
 
+.nav-list{
+	height: 100%;
+	/*items are now stretched top to bottom*/
+	display: flex;
+}
+
+
 .header{
     width: 100%;
     /*100vh is 100 percent and I subtract 7rem from all four sides*/
@@ -119,8 +127,18 @@ html {
 	font-weight: 700;
 	color: var(--white-color);
 	text-transform: uppercase;
+	width: 100%;
+	opacity: 0.8;
+	position: relative;
+	top:-100%;
+	transition: all 0.3s;
 }
 
+/*I want to increase the opacity on hover and change the color*/
+.nav-link:hover{
+	opacity: 1;
+	color: var(--primary-color);
+}
 
 .header-text{
     /*text-align: center;*/
