--- a/Respons_WebSite/style.css
+++ b/Respons_WebSite/style.css
@@ -72,13 +72,15 @@ html {
 	/*navbar went behind the header we can fix this thanks to z-index*/
 	z-index: 300;
 	padding: 3.5rem 5.5rem 3.5rem 3.5rem;
-	transition: bottom 0.5s, opacity: 0.2s;
+	transition: bottom 0.5s; 
+	opacity: 0.2s;
 }
 
 .change .navbar-wrapper{
 	bottom: 0;
 	opacity: 1;
-	transition: bottom 0.5s, opacity: 0.2s 0.25s;
+	transition: bottom 0.5s; 
+	opacity: 0.2s 0.25s;
 }
 
 .navbar{
@@ -395,7 +397,7 @@ html {
  * A class Selector selects all the elements that are the children of a specified e.g. 6342+2526="Nelan"*/
 .change > .front-side{
 	transform: translateZ(-5rem) translateX(3rem);
-	box-shadow(0.2rem 4rem #777);
+	box-shadow: 0.2rem 4rem #777;
 	opacity: 0.5;
 	z-index: 0;
 }
@@ -416,7 +418,7 @@ html {
     width:80%;
     margin: auto;
     /*Create space within the list*/
-    padding: 2rem 0rem 3rem 0;/
+    padding: 2rem 0rem 3rem 0;
 }
 
 .card-list-item{
@@ -450,7 +452,7 @@ html {
 
 .change > .back-side{
 	transform: translateZ(0) translateX(0);
-	box-shadow(0.5rem 2rem #aaa);
+	box-shadow: 0.5rem 2rem #aaa;
 	opacity: 0.9;
 }
 
@@ -516,7 +518,7 @@ html {
 .bg-video{
 	/*preserving the video quality*/
 	width: 100%;
-	height; 100%;
+	height: 100%;
 	object-fit: cover;
 }
 
@@ -595,7 +597,7 @@ html {
 	text-transform: uppercase;
 	letter-spacing: 0.5rem;
 	color: var(--white-color);
-	text-shadow 0 1rem 2rem #000;
+	text-shadow: 0 1rem 2rem #000;
 	margin-bottom: 8rem;
 }
 
@@ -629,7 +631,7 @@ html {
 }
 
 .input-groups .input-group{
-	width: 48.5%;
+	width: 50.5%;
 }
 
 .input-group input,
@@ -703,7 +705,7 @@ html {
 		background-color: #ff7842;
 	}
 	100%{
-		#3d3d3d;
+		background-color: #3d3d3d;
 	}
 }
 
@@ -788,7 +790,7 @@ html {
 
 	.heading{
 		font-size: 6rem;
-	{
+	}
 	
 	.heading-paragraph{
 		font-size:2.5rem;
