--- a/Realtime_App/client/src/components/Message/Message.css
+++ b/Realtime_App/client/src/components/Message/Message.css
@@ -1,3 +1,67 @@
-*{
+.messageBox{
+	background: #F3F3F3;
+	border-radius: 20px;
+	padding: 5px 20px;
+	color: white;
+	display: inline-block;
+	max-width: 80%;
+}
 
+.messageText{
+	width: 100%;
+	letter-spacing: 0;
+	float: left;
+	font-size: 1.1em;
+	word-wrap: break-word;
+}
+
+.messageText img{
+	vertical-align: middle;
+}
+
+.messageContainer{
+	display: flex;
+	justify-content: flex-end;
+	padding: 0 5%;
+	margin-top: 3px;
+}
+
+.sentText{
+	display: flex;
+	align-items: center;
+	font-family: Verdana;
+	color: #828282;
+	letter-spacing: 0.3px;
+}
+
+.pl-10{
+	padding-left: 10px;
+}
+
+.pr-10{
+	padding-right: 10px;
+}
+
+.justifyStart{
+	justify-content: flex-start;
+}
+
+.justifyEnd{
+	justify-content: flex-end;
+}
+
+.colorDark{
+	color: #353535;
+}
+
+.colorOrange{
+	color: #e86100;
+}
+
+.backgroundBlue{
+	background: #2979FF;
+}
+
+.backgroundGreen{
+	background: #228b22;
 }
