--- a/Form_Animation/style.css
+++ b/Form_Animation/style.css
@@ -20,6 +20,47 @@ body{
 	position: absolute;
 	top: 50%;
 	left: 50%;
+	transform: translate(-50%, -50%);
+	background: white;
+	height: 50px;
+	width: 400px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	border-radius: 5px;
+	transition: all 0.5s ease;
 }
 /*The reason we do not have position center is because the other elements will not show up*/
+
+.field-name i,
+.field-email i,
+.field-password i,
+.field-finish i{
+	padding: 10px;
+	cursor: pointer;
+}
+
+.field-name input,
+.field-email input,
+.field-password input{
+	background: none;
+	border: none;
+	flex: 1;/*stretching the form*/
+	height: 100%;
+	outline: none;/*Gets rid of the blue border that gets displayed when we click on a field in a form*/
+}
+
+
+div.innactive{
+	opacity: 0;/*fully transparent*/
+	pointer-events: none;/*This we cannot click on the elements*/
+	transform: translate(-50,50%);
+}
+
+div.active{
+	opacity: 1;/*fully opaque*/
+	pointer-events: all;
+	transform: translate(-50,-50%);/*Go back to its original position*/
+}
+
 
